@@ -4,6 +4,8 @@ Revision history for Perl extension Exception::Class::DBI.
         - Fixed test failure due to the change in value of $dbh->err in DBI
           1.601. First reported by Andreas J. König; fix suggested by Tim
           Bunce.
+        - Added the "configure_requires", and "recommends" parameters to
+          Build.PL.
 
 0.95    2006-07-18T22:14:41
         - Fixed test failure for localized error messages. Reported by Jens
